--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tochka</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-
+    <h1 class="text">Тестовое задание</h1>
+    <h3 class="text">На экранах до 1024px показывать CSS-анимацию. При клике на кнопку плавный scroll
+        до следующего блока.</h3>
+    <div class="btn-container">
+        <button class="text">Подробнее</button>
+    </div>
+    <div class="img-container">
+        <img src="images/shadow.png">
+        <img src="images/splash.png">
+        <img class="img-wallet" src="images/wallet.png">
+    </div>
+    <h2 class="text">Колонки с иконками</h2>
+    <div class="icon-container">
+        <img src="images/icon_1.svg">
+        <h4 class="text">Банковские карты</h4>
+    </div>
 </body>
 </html>
