--- a/index.html
+++ b/index.html
@@ -6,21 +6,46 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-    <h1 class="text">Тестовое задание</h1>
-    <h3 class="text">На экранах до 1024px показывать CSS-анимацию. При клике на кнопку плавный scroll
-        до следующего блока.</h3>
-    <div class="btn-container">
-        <button class="text">Подробнее</button>
+    <div class="first-block">
+        <div class="first-block-text">
+            <h1 class="text">Тестовое задание</h1>
+            <h3 class="text">На экранах до 1024px показывать CSS-анимацию. При клике на кнопку плавный scroll
+                до следующего блока.</h3>
+            <div class="btn-container">
+                <a class="text" href="#second">Подробнее</a>
+            </div>
+        </div>
+        <div class="img-container">
+            <img src="images/shadow.png">
+            <img src="images/splash.png">
+            <img class="img-wallet" src="images/wallet.png">
+        </div>
     </div>
-    <div class="img-container">
-        <img src="images/shadow.png">
-        <img src="images/splash.png">
-        <img class="img-wallet" src="images/wallet.png">
+    <div class="second-block" id="second">
+        <h2 class="text">Колонки с иконками</h2>
+        <div class="column-list">
+            <div class="icon-container">
+                <img src="images/icon_1.svg">
+                <h4 class="text">Банковские карты</h4>
+            </div>
+            <div class="icon-container">
+                <img src="images/icon_2.svg">
+                <h4 class="text">Мессенджер</h4>
+            </div>
+            <div class="icon-container">
+                <img src="images/icon_3.svg">
+                <h4 class="text">Интернет-банк</h4>
+            </div>
+            <div class="icon-container">
+                <img src="images/icon_4.svg">
+                <h4 class="text">Электронный кошелёк</h4>
+            </div>
+            <div class="icon-container">
+                <img src="images/icon_5.svg">
+                <h4 class="text">Баланс телефона</h4>
+            </div>
+        </div>
     </div>
-    <h2 class="text">Колонки с иконками</h2>
-    <div class="icon-container">
-        <img src="images/icon_1.svg">
-        <h4 class="text">Банковские карты</h4>
-    </div>
+    <script src="script.js"></script>
 </body>
 </html>
