Add all animations

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
         </div>
         <div class="img-container">
-            <img src="images/shadow.png">
             <img src="images/splash.png">
+            <img class="img-shadow" src="images/shadow.png">
             <img class="img-wallet" src="images/wallet.png">
         </div>
     </div>
