--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <div class="first-block">
-        <div class="first-block-text">
+        <div class="big-text">
             <h1 class="text">Тестовое задание</h1>
+        </div>
+        <div class="first-block-text">
             <h3 class="text">На экранах до 1024px показывать CSS-анимацию. При клике на кнопку плавный scroll
                 до следующего блока.</h3>
             <div class="btn-container">
