--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tochka</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
     <div class="first-block">
-        <div class="big-text">
-            <h1 class="text">Тестовое задание</h1>
-        </div>
-        <div class="first-block-text">
-            <h3 class="text">На экранах до 1024px показывать CSS-анимацию. При клике на кнопку плавный scroll
-                до следующего блока.</h3>
-            <div class="btn-container">
-                <a class="text" href="#second">Подробнее</a>
+        <div class="left-content">
+            <div class="big-text">
+                <h1 class="text">Тестовое задание</h1>
+            </div>
+            <div class="first-block-text">
+                <h3 class="text">На экранах до 1024px показывать CSS-анимацию. При клике на кнопку плавный scroll
+                    до следующего блока.</h3>
+                <div class="btn-container">
+                    <a class="text" href="#second">Подробнее</a>
+                </div>
             </div>
         </div>
         <div class="img-container">
