right offsets, but not all

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     до следующего блока.</h3>
                 <div class="btn-container">
                     <a class="text" href="#second">Подробнее</a>
+                    <img src="images/button_1.png">
                 </div>
             </div>
         </div>
