--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="first-block">
         <div class="left-content">
-            <div class="big-text">
+            <div>
                 <h1 class="text">Тестовое задание</h1>
             </div>
             <div class="first-block-text">
@@ -31,7 +31,7 @@
         <h2 class="text">Колонки с иконками</h2>
         <div class="column-list">
             <div class="icon-container">
-                <img src="images/icon_1.svg">
+                <img src="images/icon_3.svg">
                 <h4 class="text">Банковские карты</h4>
             </div>
             <div class="icon-container">
@@ -39,11 +39,11 @@
                 <h4 class="text">Мессенджер</h4>
             </div>
             <div class="icon-container">
-                <img src="images/icon_3.svg">
+                <img src="images/icon_4.svg">
                 <h4 class="text">Интернет-банк</h4>
             </div>
             <div class="icon-container">
-                <img src="images/icon_4.svg">
+                <img src="images/icon_1.svg">
                 <h4 class="text">Электронный кошелёк</h4>
             </div>
             <div class="icon-container">
